# ono-firmware

./: CMakeLists.txt  prj.conf  west.yml
src/: ble.c  ble.h  haptics.c  haptics.h  imu.c  imu.h  main.c  pmic.c  pmic.h  pressure.c  pressure.h
